# ansi_colle.server

./: .gitignore  pyproject.toml
playbooks/: site.yml
roles/containers/files/: podman-auto-update.conf
roles/samba/defaults/: main.yml
roles/samba/handlers/: main.yml
roles/samba/tasks/: main.yml
