[project]
name = "ansi_colle"
version = "1.0.0"
description = "Namespace that stores Ansible collections."
authors = [
    {name = "Chun Pan Yung", email = "31672021+ChunPanYung@users.noreply.github.com"},
    {name = "Chun Pan Yung"},
]
dependencies = [
    "pip>=23.1.2",
    "ansible>=8.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/chunpanyung/ansi_colle-server"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    # "ansible-lint>=6.17; platform_system != \"Windows\"",
    "tomli-w",
    "yamllint",
    "pywinrm",
    "pytest-testinfra",
    "molecule",
    "molecule-plugins",
]
